# game-painter

./: README.md  main.py  painter.py  pyproject.toml  requirements.txt  server.py  test_ai.py  提示词.md
.cursor/commands/: commit2pypi.md
.cursor/rules/useuv/: RULE.md
