[project]
name = "game-painter"
version = "2.2.5"
description = "🎨 基础绘图工具 - 15个核心MCP绘图工具"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "dzqdzq" }
]
keywords = ["mcp", "dzqdzq", "graphics", "drawing", "painter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "Pillow>=10.0.0",
    "mcp>=1.0.0",
]

[project.scripts]
game-painter = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["painter.py", "server.py"]

[tool.hatch.build.targets.sdist]
include = [
    "painter.py",
    "server.py",
    "README.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
